@@ -1,6 +1,6 @@
 /* diritor.h: Iterator through entries in a directory.
  *
- * Copyright (C) 2007,2008,2010,2011,2012,2013,2014 Olly Betts
+ * Copyright (C) 2007,2008,2010,2011,2012,2013,2014,2015 Olly Betts
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -165,6 +165,11 @@ class DirectoryIterator {
     time_t get_mtime() {
 	ensure_statbuf_valid();
 	return statbuf.st_mtime;
+    }
+
+    time_t get_ctime() {
+	ensure_statbuf_valid();
+	return statbuf.st_ctime;
     }
 
     const char * get_owner() {
